# SVM-Hypervisor

./: README.md
example/Logger-example/: Readme.md
example/Logger-example/Application/: Main.cpp  Readme.md
example/Logger-example/Driver/: DrvMain.cpp  GuestContext.hpp  Readme.md
example/RedTracer/: Readme.md
example/RedTracer/Application/: CMakeLists.txt  Readme.md
example/RedTracer/Application/include/: DriverLoader.hpp  PEInformation.hpp  PEReader.hpp
example/RedTracer/Application/src/: Main.cpp  PEReader.cpp
example/RedTracer/Driver/: DrvMain.cpp  Pushf_Popf.asm  Readme.md  SVMrun.asm
example/Simple example/: DrvMain.cpp  Readme.md  SVMrun.asm
example/Trace-example/: DrvMain.cpp  Readme.md  SVMrun.asm
example/Trace-example/Application/: Main.cpp  Readme.md
example/Trace-example/Driver/: Readme.md
example/Trace-example/Samples/: Readme.md
include/HyperVisor/: General.hpp  HyperVisor.cpp  HyperVisor.hpp  Spinlock.cpp  Spinlock.hpp
include/HyperVisor/CommonApi/: MemoryUtils.cpp  PteUtils.cpp  SystemMemory.cpp  SystemMemory.hpp
include/HyperVisor/CommonTypes/: CPUID.hpp  Exception.hpp  Interrupts.hpp  MSR.hpp  PTE.hpp  Registers.hpp  SVM.hpp  Segmentation.hpp
include/HyperVisor/Logger/: Log.cpp  Log.hpp  LogSpin.hpp  Logger.hpp  Spinlock.cpp
include/HyperVisor/Pe/: PeInformation.hpp  PeStruct.hpp
include/HyperVisor/TraceWriter/: File.cpp  File.hpp  Trace.cpp  Trace.hpp
include/HyperVisor/graphViz/: GraphVizLanguage.cpp  GraphVizLanguage.hpp
